spell correction Experiments

--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -10,7 +10,7 @@
                     <div class="headerMenuTab" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active">Summary</div>
                     <div class="headerMenuTab">Indices</div>
                     <div class="headerMenuTab">Analytics</div>
-                    <div class="headerMenuTab">Experments</div>
+                    <div class="headerMenuTab">Experiments</div>
                     <div class="headerMenuTab">Settings <span class="statusIndicator"></span></div>
                 </div>
             </div>
