--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -197,6 +197,7 @@
                             margin: 0;
                             border: 0;
                             height: 36px;
+                            padding-left: 10px;
                             &:focus{   
                                 border: 0 !important;                             
                                 outline: 0 !important;
