--- a/findly-builder/src/app/components/attributes-list/attributes-list.component.scss
+++ b/findly-builder/src/app/components/attributes-list/attributes-list.component.scss
@@ -122,7 +122,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 30px;
-        justify-content: space-between;
+        justify-content: flex-end;
         .tab-name{
             padding: 6px 13px;
             margin-right: 15px;
@@ -269,9 +269,9 @@
                 height: calc(100vh - 206px) !important;
                 &.rulse_tab{
                     height: calc(100vh - 275px) !important;
-                    &.if-select-all{
-                        height: calc(100vh - 336px) !important
-                    }
+                    // &.if-select-all{
+                    //     height: calc(100vh - 336px) !important
+                    // }
                 }
                 &.if-select-all{
                     height: calc(100vh - 267px) !important
@@ -349,6 +349,7 @@
                             margin: 0;
                             border: 0;
                             height: 36px;
+                            padding-left: 10px;
                             &:focus{   
                                 border: 0 !important;                             
                                 outline: 0 !important;
